boreal/tests/assets/invalid_files/parsing/str_to_hex_int2.yar
// [error: error converting hexadecimal notation to integer: invalid digit found in string]
rule a {
    strings:
        $a = /\xGR/
    condition:
        $a
}
